unpackaged/main/default/objects/Help_Surface__mdt/fields/Article_Path__c.field-meta.xml
<CustomField>
    <fullName>Article_Path__c</fullName>
    <description>URL segment of the page that hosts c:helpArticlePage (?name= / ?topic= append). Blank falls back to &quot;article&quot;.</description>
    <label>Article Path</label>
    <length>80</length>
    <type>Text</type>
</CustomField>