unpackaged/main/default/objects/Help_Surface__mdt/fields/Events_Path__c.field-meta.xml
<CustomField>
    <fullName>Events_Path__c</fullName>
    <description>URL segment of the page that hosts c:eventsPage. Blank falls back to &quot;events&quot;.</description>
    <label>Events Path</label>
    <length>80</length>
    <type>Text</type>
</CustomField>