unpackaged/main/default/objects/Help_Surface__mdt/fields/Home_Path__c.field-meta.xml
<CustomField>
    <fullName>Home_Path__c</fullName>
    <description>URL segment of the page that hosts c:unifiedLanding on this site, relative to the site root (e.g. &quot;help-center&quot;). Blank = the site root.</description>
    <label>Home Path</label>
    <length>80</length>
    <type>Text</type>
</CustomField>