unpackaged/main/default/objects/Help_Surface__mdt/fields/Is_Default__c.field-meta.xml
<CustomField>
    <fullName>Is_Default__c</fullName>
    <defaultValue>false</defaultValue>
    <description>The surface links resolve to when there is no site context (the Admin Console&#39;s Copy link runs in Lightning) or the current network has no row of its own: ResourceCenterService.defaultSurface(). Exactly one row should be flagged (Arc). Several flagged → the first by DeveloperName.</description>
    <label>Is Default</label>
    <type>Checkbox</type>
</CustomField>