unpackaged/main/default/objects/Help_Surface__mdt/fields/Network_Name__c.field-meta.xml
<CustomField>
    <fullName>Network_Name__c</fullName>
    <description>Name of the Experience Cloud Network (Digital Experience) this row describes, e.g. &quot;ARC&quot; or &quot;Diversify Help Center&quot; — the lookup key (NexSArticleEngagementController.resolveSurface() returns it).</description>
    <label>Network Name</label>
    <length>80</length>
    <type>Text</type>
</CustomField>