unpackaged/main/default/objects/Help_Surface__mdt/fields/Resources_Path__c.field-meta.xml
<CustomField>
    <fullName>Resources_Path__c</fullName>
    <description>URL segment of the page that hosts c:resourceCenter (?rcview= / &amp;rcslug= append), e.g. &quot;learning&quot; on ARC. Blank falls back to &quot;resources&quot;.</description>
    <label>Resources Path</label>
    <length>80</length>
    <type>Text</type>
</CustomField>